tests/baselines/reference/internalAliasUninitializedModuleInsideLocalModuleWithoutExport(strict=true).errors.txt
internalAliasUninitializedModuleInsideLocalModuleWithoutExport.ts(4,13): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
internalAliasUninitializedModuleInsideLocalModuleWithoutExport.ts(12,5): error TS2454: Variable 'x' is used before being assigned.


==== internalAliasUninitializedModuleInsideLocalModuleWithoutExport.ts (2 errors) ====
    export module a {
        export module b {
            export interface I {
                foo();
                ~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
            }
        }
    }
    
    export module c {
        import b = a.b;
        export var x: b.I;
        x.foo();
        ~
!!! error TS2454: Variable 'x' is used before being assigned.
    }